# magic_os

./: .gdbinit  .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  riscv64i-custom_target.json
.cargo/: config.toml
allocator/: Cargo.toml
allocator/src/: lib.rs
page_alloc/src/: lib.rs  physical_memory_manager.rs
page_table/: Cargo.toml
page_table/src/: entry.rs  lib.rs
page_table/src/entry/: addr.rs
sbi_print/src/: lib.rs
src/: allocator.rs  cpu.rs  dtb.rs  kalloc.rs  kernel_trap.rs  main.rs  physical_memory_manager.rs  proc.rs  sbi_print.rs  scheduler.rs  start.rs  trap.rs  trapframe.rs  user_trap.rs  vm.rs
src/asm/: entry.S  kernelvec.S  switch.S  trampoline.S
src/linker/: linker.ld
src/vm/: page_table.rs  repr.rs
src/vm/page_table/: addr.rs  entry.rs
src/vm/page_table/entry/: addr.rs  perm.rs
