[package]
name = "magic_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
cc = "1.0.79"

[dependencies]
riscv = "0.10.1"
sbi = "0.2.0"
fdt = "0.1.5"
