[package]
name = "magic_os"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
    "page_alloc",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
riscv = "0.10.1"
sbi = "0.2.0"
fdt = "0.1.5"
spin = "0.9.6"
bit_field = "0.10.2"
page_alloc = { path = "page_alloc" }
sbi_print = { path = "sbi_print" }
page_table = { path = "page_table" }
allocator = { path = "allocator" }
